--- a/IzvorniKod/GuildBuildApp/app/src/main/res/values/styles.xml
+++ b/IzvorniKod/GuildBuildApp/app/src/main/res/values/styles.xml
@@ -7,5 +7,19 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+    <style name="editText_style" >
+        <item name="android:gravity">center</item>
+        <item name="android:background">@drawable/edittext_background</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:ems">10</item>
+        <item name="android:layout_margin">5dp</item>
+    </style>
 
+    <style name="button_style">
+        <item name="android:layout_margin">5dp</item>
+        <item name="android:background">@drawable/buttonstyle</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
 </resources>
