--- a/IzvorniKod/GuildBuildApp/app/src/main/res/values/colors.xml
+++ b/IzvorniKod/GuildBuildApp/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#353E4F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="hintColor">#9c9c9c</color>
+    <color name="backgroundColor">#9C9C9C</color>
 </resources>
