adding 2 new activities

--- a/IzvorniKod/GuildBuildApp/app/src/main/res/layout/activity_messages.xml
+++ b/IzvorniKod/GuildBuildApp/app/src/main/res/layout/activity_messages.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="hr.fer.amigosi.guildbuild.GuildListActivity"
+    tools:context="hr.fer.amigosi.guildbuild.MessagesActivity"
     android:background="@color/colorPrimaryDark">
 
     <LinearLayout
@@ -13,13 +13,20 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/ListOfGuildsText"
+            android:id="@+id/MessagesText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="cursive"
-            android:text="List of Guilds"
+            android:text="Inbox"
             android:textAlignment="center"
             android:textColor="@android:color/background_light"
             android:textSize="55sp" />
+
+        <Button
+            android:id="@+id/button"
+            style="@style/button_style"
+            android:lineSpacingExtra="12sp"
+            android:text="Send message" />
     </LinearLayout>
+
 </android.widget.RelativeLayout>
