--- a/IzvorniKod/GuildBuildApp/app/src/main/res/layout/activity_user_profile.xml
+++ b/IzvorniKod/GuildBuildApp/app/src/main/res/layout/activity_user_profile.xml
@@ -16,15 +16,34 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/ProfileText"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="cursive"
-            android:text="Profile"
-            android:textAlignment="center"
-            android:textSize="55sp"
-            android:textStyle="bold" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/ProfileText"
+                android:layout_width="626dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:fontFamily="cursive"
+                android:text="Profile"
+                android:textAlignment="center"
+                android:textColor="@android:color/background_light"
+                android:textSize="40sp"
+                android:textStyle="bold" />
+
+            <ImageButton
+                android:id="@+id/imageButton"
+                style="@android:style/Widget.DeviceDefault.Light.ImageButton"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@color/colorPrimaryDark"
+                android:onClick="Messages"
+                app:srcCompat="@android:drawable/ic_dialog_email" />
+
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -37,6 +56,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:onClick="EditProfile"
                 android:text="Edit profile"
                 android:textAppearance="@style/TextAppearance.AppCompat.Button" />
 
