--- a/IzvorniKod/GuildBuildApp/app/src/main/res/values/styles.xml
+++ b/IzvorniKod/GuildBuildApp/app/src/main/res/values/styles.xml
@@ -21,5 +21,8 @@
         <item name="android:background">@drawable/buttonstyle</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:textAppearance">@style/TextAppearance.AppCompat.Button</item>
     </style>
 </resources>
