--- a/IzvorniKod/GuildBuildApp/app/src/main/res/layout/activity_administrator_add_class.xml
+++ b/IzvorniKod/GuildBuildApp/app/src/main/res/layout/activity_administrator_add_class.xml
@@ -1,9 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="hr.fer.amigosi.guildbuild.AdministratorAddClassActivity">
+    tools:context="hr.fer.amigosi.guildbuild.AdministratorProfileActivity"
+    android:background="@color/colorPrimaryDark"><![CDATA[>]]>
 
-</android.support.constraint.ConstraintLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/textViewC"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="cursive"
+            android:text="Add class"
+            android:textAlignment="center"
+            android:textAppearance="@style/TextAppearance.AppCompat.Display3"
+            android:textColor="@android:color/background_light"
+            android:textSize="30sp"
+            android:textStyle="bold" />
+
+        <Spinner
+            android:id="@+id/spinner"
+            android:layout_width="match_parent"
+            android:layout_height="39dp"
+            android:background="@android:drawable/btn_dropdown"
+            android:spinnerMode="dropdown"></Spinner>
+
+        <EditText
+            android:id="@+id/classToAdd"
+            style="@style/editText_style"
+            android:hint="Class name"
+            android:inputType="textPersonName"
+            android:textColor="@color/colorPrimaryDark"
+            android:textColorHint="@color/hintColor" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+
+            <Button
+                android:id="@+id/btnAddClass"
+                style="@style/button_style"
+                android:layout_weight="1"
+                android:text="Add Class" />
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+</android.widget.RelativeLayout>
