--- a/IzvorniKod/GuildBuildApp/app/src/main/res/layout/activity_home.xml
+++ b/IzvorniKod/GuildBuildApp/app/src/main/res/layout/activity_home.xml
@@ -35,7 +35,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="horizontal">
 
             <Button
@@ -60,6 +60,26 @@
                 android:layout_weight="1"
                 android:onClick="GuildList"
                 android:text="List of Guilds" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="93dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/Nickname"
+                android:layout_width="458dp"
+                android:layout_height="111dp"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:layout_weight="1"
+                android:fontFamily="cursive"
+                android:textAlignment="center"
+                android:textAppearance="@style/TextAppearance.AppCompat.Display3"
+                android:textColor="@android:color/background_light"
+                android:textSize="58sp" />
 
         </LinearLayout>
 
