--- a/IzvorniKod/GuildBuildApp/app/src/main/res/layout/activity_coordinator_owner_functions.xml
+++ b/IzvorniKod/GuildBuildApp/app/src/main/res/layout/activity_coordinator_owner_functions.xml
@@ -19,15 +19,17 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="cursive"
-            android:text="@string/app_name"
+            android:text="Change user's role"
             android:textAlignment="center"
             android:textAppearance="@style/TextAppearance.AppCompat.Display3"
-            android:textColor="@android:color/background_light" />
+            android:textColor="@android:color/background_light"
+            android:textSize="30sp"
+            android:textStyle="bold" />
 
         <EditText
             android:id="@+id/nicknameTextFunctions"
             style="@style/editText_style"
-            android:hint="Nickname"
+            android:hint="Enter user's nickname"
             android:inputType="textPersonName"
             android:textColor="@color/colorPrimaryDark"
             android:textColorHint="@color/hintColor" />
