--- a/IzvorniKod/GuildBuildApp/app/src/main/res/layout/activity_administrator_add_class.xml
+++ b/IzvorniKod/GuildBuildApp/app/src/main/res/layout/activity_administrator_add_class.xml
@@ -24,13 +24,26 @@
             android:textColor="@android:color/background_light"
             android:textSize="30sp"
             android:textStyle="bold" />
-
-        <Spinner
-            android:id="@+id/spinner"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="39dp"
-            android:background="@android:drawable/btn_dropdown"
-            android:spinnerMode="dropdown"></Spinner>
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textViewClass"
+                android:text="Game: "
+                android:textSize="50px"
+                android:textAlignment="center" />
+
+            <Spinner
+                android:id="@+id/spinner"
+                android:layout_width="match_parent"
+                android:layout_height="39dp"
+                android:background="@android:drawable/btn_dropdown"
+                android:spinnerMode="dropdown"></Spinner>
+        </LinearLayout>
+
 
         <EditText
             android:id="@+id/classToAdd"
