--- a/IzvorniKod/GuildBuildApp/app/src/main/res/layout/activity_administrator_del_acc.xml
+++ b/IzvorniKod/GuildBuildApp/app/src/main/res/layout/activity_administrator_del_acc.xml
@@ -8,43 +8,8 @@
     android:background="@color/colorPrimaryDark">>
 
     <LinearLayout
+        android:id="@+id/linLayout1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="cursive"
-            android:text="Delete user's profile"
-            android:textAlignment="center"
-            android:textAppearance="@style/TextAppearance.AppCompat.Display3"
-            android:textColor="@android:color/background_light"
-            android:textSize="30sp"
-            android:textStyle="bold" />
-
-        <EditText
-            android:id="@+id/nicknameForDeleteText"
-            style="@style/editText_style"
-            android:hint="Nickname"
-            android:inputType="textPersonName"
-            android:textColor="@color/colorPrimaryDark"
-            android:textColorHint="@color/hintColor" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-
-
-            <Button
-                android:id="@+id/btnDeleteUser"
-                style="@style/button_style"
-                android:layout_weight="1"
-                android:text="Delete user" />
-
-        </LinearLayout>
-
-    </LinearLayout>
+        android:orientation="vertical"></LinearLayout>
 </android.widget.RelativeLayout>
