Changed few activities

--- a/IzvorniKod/GuildBuildApp/app/src/main/res/layout/activity_add_new_character.xml
+++ b/IzvorniKod/GuildBuildApp/app/src/main/res/layout/activity_add_new_character.xml
@@ -53,7 +53,7 @@
             android:textSize="20sp" />
 
         <Spinner
-            android:id="@+id/gameClassSpinner"
+            android:id="@+id/charClassSpinner"
             android:layout_width="match_parent"
             android:layout_height="39dp"
             android:background="@android:drawable/btn_dropdown"
