Moved the delete button to editProfile screen, replaced some querries with DAO class methods. Added a method to update users description and to get a user from the database.

--- a/IzvorniKod/GuildBuildApp/app/src/main/res/layout/activity_edit_profile.xml
+++ b/IzvorniKod/GuildBuildApp/app/src/main/res/layout/activity_edit_profile.xml
@@ -67,6 +67,15 @@
                 android:textAlignment="center"
                 android:text="Add new character"
                 android:textAppearance="@style/TextAppearance.AppCompat.Button" />
+
+            <Button
+                android:id="@+id/deleteProfile"
+                style="@style/button_style"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Delete profile"
+                android:textAppearance="@style/TextAppearance.AppCompat.Button" />
         </LinearLayout>
 
     </LinearLayout>
