--- a/IzvorniKod/GuildBuildApp/app/src/main/res/layout/activity_messages.xml
+++ b/IzvorniKod/GuildBuildApp/app/src/main/res/layout/activity_messages.xml
@@ -26,7 +26,7 @@
             android:id="@+id/button"
             style="@style/button_style"
             android:lineSpacingExtra="12sp"
-            android:text="Send message" />
+            android:text="@string/send_message" />
     </LinearLayout>
 
 </android.widget.RelativeLayout>
